# yggr

./: .gitignore  .mutants.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  TESTING.md  deny.toml  justfile  sonar-project.properties
.cargo/: mutants.toml
.cargo-husky/hooks/: pre-commit  pre-push
.config/: nextest.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  docs.yml  osv-scanner.yml  publish.yml  security.yml
book/: book.toml
book/src/: SUMMARY.md  introduction.md
book/src/engine/: custom-host.md  events-and-actions.md  overview.md
book/src/getting-started/: installation.md  state-machine.md  three-node-cluster.md
book/src/reference/: crates.md
book/src/runtime/: config.md  errors.md  learners.md  membership.md  node.md  observability.md  operations.md  read-index.md  snapshots.md  writes.md
book/src/sim/: overview.md
core/: Cargo.toml  build.rs
core/src/: lib.rs
core/src/engine/: action.rs  engine.rs  event.rs  incoming.rs  mod.rs  role_state.rs
core/src/records/: append_entries.rs  log_entry.rs  message.rs  mod.rs  vote.rs
core/src/transport/: mod.rs
core/src/transport/mapping/: append_entries.rs  mod.rs  vote.rs
core/src/transport/mapping/tests/: append_entries.rs  message.rs  mod.rs  strategies.rs  vote.rs
core/src/transport/protobuf/: raft.proto
core/src/types/: index.rs  log.rs  node.rs  term.rs
docs/specs/: deterministic-simulation-and-storage-faults.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_disk_storage_recover.rs  fuzz_engine_events.rs  fuzz_proto_message.rs
jotun/: Cargo.toml
jotun-core/: Cargo.toml
jotun-core/proptest-regressions/engine/: log.txt
jotun-core/proptest-regressions/engine/tests/: client_proposal.txt  vote_response.txt
jotun-core/src/: lib.rs
jotun-core/src/engine/: action.rs  engine.rs  env.rs  event.rs  log.rs  metrics.rs  mod.rs  peer_progress.rs  role_state.rs  telemetry.rs
jotun-core/src/engine/tests/: append_entries_request.rs  append_entries_response.rs  config_change.rs  fixtures.rs  invariants.rs  membership.rs  mod.rs  pre_vote.rs  snapshot.rs  vote_request.rs  vote_response.rs
jotun-core/src/records/: install_snapshot.rs  mod.rs  pre_vote.rs
jotun-core/src/transport/mapping/: install_snapshot.rs  mod.rs  pre_vote.rs
jotun-core/src/transport/mapping/tests/: mod.rs
jotun-core/src/transport/protobuf/: raft.proto
jotun-core/src/types/: index.rs
jotun-sim/: Cargo.toml
jotun-sim/proptest-regressions/tests/: chaos.txt
jotun-sim/src/: cluster.rs  harness.rs  invariants.rs  network.rs  schedule.rs
jotun-sim/src/tests/: chaos.rs  invariants.rs  membership.rs  mod.rs  proptests.rs  snapshot.rs
jotun/src/: lib.rs  node.rs  state_machine.rs  storage.rs  transport.rs
jotun/src/storage/: disk.rs  mod.rs
jotun/src/transport/: mod.rs  tcp.rs
jotun/tests/: disk_storage.rs  multi_node.rs  node.rs  node_surface.rs  nonblocking_snapshot.rs  runtime_chaos.rs  tcp_transport.rs  traits.rs
yggr/: Cargo.toml
yggr-core/: Cargo.toml
yggr-core/proptest-regressions/engine/tests/: append_entries_response.txt
yggr-core/src/: lib.rs
yggr-core/src/engine/: action.rs  engine.rs  env.rs  event.rs  incoming.rs  mod.rs  peer_progress.rs  role_state.rs  telemetry.rs  verification.rs
yggr-core/src/engine/tests/: append_entries_request.rs  append_entries_response.rs  broadcast.rs  client_proposal.rs  fixtures.rs  leadership_transfer.rs  learner.rs  lease.rs  membership.rs  metrics.rs  mod.rs  persistence.rs  pre_vote.rs  read_index.rs  snapshot.rs  tick.rs
yggr-core/src/records/: append_entries.rs  log_entry.rs  message.rs  timeout_now.rs  vote.rs
yggr-core/src/transport/mapping/: append_entries.rs  install_snapshot.rs  timeout_now.rs  vote.rs
yggr-core/src/transport/mapping/tests/: append_entries.rs  install_snapshot.rs  message.rs  pre_vote.rs  strategies.rs  timeout_now.rs  vote.rs
yggr-core/src/transport/protobuf/: mod.rs  raft.proto
yggr-core/src/types/: index.rs  log.rs  mod.rs  node.rs  term.rs
yggr-examples/: Cargo.toml  run-three-node.sh
yggr-sim/: Cargo.toml
yggr-sim/proptest-regressions/tests/: chaos.txt  proptests.txt
yggr-sim/src/: cluster.rs  env.rs  harness.rs  invariants.rs  lib.rs  network.rs  schedule.rs
yggr-sim/src/tests/: chaos.rs  invariants.rs  membership.rs  mod.rs  proptests.rs  smoke.rs  snapshot.rs
yggr/doc/: HOSTING_A_STATE_MACHINE.md  TRANSPORT_AND_SIDE_CHANNELS.md
yggr/src/: lib.rs  node.rs  state_machine.rs
yggr/src/storage/: disk.rs  mod.rs
yggr/src/transport/: mod.rs  task_registry.rs  tcp.rs
yggr/tests/: disk_storage.rs  loom_task_registry.rs  multi_node.rs  node.rs  node_surface.rs  nonblocking_snapshot.rs  runtime_chaos.rs  tcp_transport.rs  traits.rs
