[workspace]
resolver = "3"
members = ["jotun-core", "jotun-sim", "jotun"]

[workspace.lints.rust]
unsafe_code = "forbid"
rust_2018_idioms = { level = "warn", priority = -1 }
unreachable_pub = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
indexing_slicing = "warn"
unwrap_used = "warn"
expect_used = "warn"
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
