[package]
name = "jotun-sim"
version = "0.1.0"
edition = "2024"
publish = false
license-file = "../LICENSE.md"

[dependencies]
jotun-core = { path = "../jotun-core", version = "0.1" }
rand = { version = "0.9", default-features = false, features = ["std", "std_rng"] }

[dev-dependencies]
proptest = "1"

[lints]
workspace = true
