[package]
name = "jotun"
version = "0.1.0"
edition = "2024"
publish = false
license-file = "../LICENSE.md"
description = "Batteries-included Raft node runtime built on jotun-core."

[dependencies]
jotun-core = { path = "../jotun-core", version = "0.1" }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "time", "net", "io-util", "macros"] }
prost = "0.13"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["test-util"] }

[lints]
workspace = true
