[package]
name = "yggr-examples"
version = "0.1.0"
edition = "2024"
publish = false
license-file = "../LICENSE.md"
description = "Example programs built on yggr."

[dependencies]
yggr = { path = "../yggr", version = "0.1" }
yggr-core = { path = "../yggr-core", version = "0.1" }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "time", "net", "io-util", "macros", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[lints]
workspace = true
